# gloptMP

./: CMakeLists.txt  FindGMSH.cmake  README.md  gloptMP.cpp  gloptMP.h  gmshfrac.cpp  gmshfrac.h  hilbert.cpp  hilbert.h  main.cpp  oneleaf.h
